<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_default"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.my.beyondphysicsapplication.BreakpointDownloadActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="">

            <RelativeLayout
                android:id="@+id/relativeLayoutToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/view_normal_margin_narrow"
                    android:padding="@dimen/imageView_button_normal_padding_narrow"
                    android:src="@mipmap/normal_back" />


                <TextView
                    android:id="@+id/textViewToolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/view_normal_margin_default"
                    android:layout_toRightOf="@+id/imageViewBack"
                    android:text="@string/activity_breakpoint_download_textViewToolbarTitle_text"
                    android:textColor="?attr/mainColorHelp"
                    android:textSize="@dimen/textView_normal_textSize_broad" />


            </RelativeLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_normal_margin_broad"
            android:layout_marginRight="@dimen/view_normal_margin_broad"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/editTextUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_normal_margin_broad"
                    android:layout_marginRight="@dimen/view_normal_margin_broad"
                    android:hint="@string/activity_breakpoint_download_editTextUrl_hint"
                    android:singleLine="true"
                    android:textColor="?attr/mainColorText"
                    android:textColorHint="@color/editText_normal_hint"
                    android:textCursorDrawable="@drawable/normal_cursor"
                    android:textSize="@dimen/textView_normal_textSize_default" />


                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_breakpoint_download_progressBar_marginTop" />

                <TextView
                    android:id="@+id/textViewProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_normal_margin_default"
                    android:text="@string/number_0_progress_text"
                    android:textColor="?attr/mainColorText"
                    android:textSize="@dimen/textView_normal_textSize_default" />

                <Button
                    android:id="@+id/buttonDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/view_normal_margin_default"
                    android:text="@string/activity_breakpoint_download_buttonDownload_text" />

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/view_normal_margin_default"
                    android:text="@string/activity_breakpoint_download_buttonCancel_text" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>